# example-python-package

./: .pre-commit-config.yaml  README.md  README.rst  noxfile.py  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: conventional-commit.yml  main-merge.yml  pages.yml  pull-request-checks.yml  pull-request.yml  pull_request_checks.yml  python-publish.yml  release-drafter.yml  release.yml
docs/source/: conf.py  index.rst
docs/source/api/: example_python_package.example.rst  example_python_package.rst  example_python_package.simple_math.rst  modules.rst
src/example_python_package/: __init__.py  example.py  simple_math.py
tests/: __init__.py  test_add.py  test_divide.py  test_multiply.py  test_subtract.py
