[tool.poetry]
  authors     = ["Kyle M. Hart <kylemhart@gmail.com>"]
  description = "A template for a modern Python package."
  license     = "MIT"
  name        = "example-python-package"
  readme      = "README.md"
  version     = "0.1.0"

[tool.poetry.dependencies]
  argparse = "^1.4.0"
  numpy    = "^1.26.4"
  python   = "^3.9"

[tool.poetry.group.dev.dependencies]
  nox        = "^2024.4.15"
  pre-commit = "^3.7.1"
  pytest     = "^8.2.2"

[build-system]
  build-backend = "poetry.core.masonry.api"
  requires      = ["poetry-core"]

[tool.poetry.scripts]
  example-python-package = "example_python_package.example:main"
