[build-system]
  build-backend = "poetry.core.masonry.api"
  requires      = ["poetry-core"]

[tool.coverage.run]
  branch = true

[tool.coverage.report]
  show_missing = true
  skip_empty   = true

[tool.poetry]
  authors     = ["Kyle M. Hart <kylemhart@gmail.com>"]
  description = "A template for a modern Python package."
  license     = "MIT"
  name        = "example-python-package"
  readme      = "README.md"
  version     = "0.1.0"

[tool.poetry.dependencies]
  argparse = "^1.4.0"
  numpy    = "^1.26.4"
  python   = "^3.10"

[tool.poetry.group.dev.dependencies]
  nox        = "^2024.4.15"
  pre-commit = "^3.7.1"
  pytest     = "^8.2.2"
  pytest-cov = "^5.0.0"
  ruff       = "^0.4.10"

[tool.poetry.group.doc.dependencies]
  sphinx           = "^7.3.7"
  sphinx-rtd-theme = "^2.0.0"


[tool.poetry.group.docs.dependencies]
esbonio = "^0.16.4"
rstcheck = "^6.2.1"

[tool.poetry.scripts]
  example-python-package = "example_python_package.example:main"

[tool.ruff]
  exclude        = ["docs"]
  line-length    = 79
  src            = ["src", "tests"]
  target-version = "py310"

[tool.ruff.lint]
  select = [
    "A",
    "ANN",
    "B",
    "BLE",
    "C90",
    "COM",
    "D",
    "E",
    "EM",
    "ERA",
    "F",
    "FBT",
    "I",
    "INP",
    "N",
    "NPY",
    "PL",
    "PT",
    "Q",
    "RSE",
    "RUF",
    "SIM",
    "UP",
    "W",
  ]

[tool.ruff.lint.pydocstyle]
  convention = "numpy"
